# butterflyfx_kernel

./: .dockerignore  .gitignore  APPS.md  BENCHMARK.md  CONTRIBUTING.md  Dockerfile  FIBONACCI_DIRECTIONAL_EXECUTIVE_SUMMARY.md  FIBONACCI_DIRECTIONAL_IMPLICATIONS.md  FIBONACCI_SPIRAL_DIRECTIONAL_ANALYSIS.md  FOUR_PILLARS_ARCHITECTURE.md  LICENSE  MANIFEST.in  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
benchmarks/: bench.py  xy_compare.py
butterflyfx/: __init__.py  manifold.py  substrate.py
core/: README_HARDENED.md  __init__.py  __init___backup.py  atomic_lens_system.py  benchmarks.py  connection_manager.py  decider.py  directional.py  fibonacci.py  fibonacci_creation.py  fibonacci_directional_levels.py  hil.py  ingestion.py  lenses.py  mathops.py  parallel.py  phi_lens.py  sampling.py  secure_substrate.py  security.py  srl.py  substrates.py  transforms.py
core/tests/: pytest.ini  run_tests.sh  test_core.py  test_directional.py  test_fibonacci.py  test_lenses.py  test_mathops.py  test_phi_lenses.py  test_sampling.py  test_secure_core.py  test_transform.py
docs/: AI_DIRECTIVE.md  API.md  BASICS.md
examples/: __init__.py  basic_demo.py
extras/: __init__.py
extras/server/: app.py
extras/server/downloads/: butterflyfx-extension.crx
extras/server/static/: app_shell.js  benefits.html  index.html  sitemap.html  styleguide.html  styles.css  substrait_lens_demo.js
extras/server/templates/: base.html  benefits.html  dashboard.html  home.html  index.html  login.html  register.html  register_success.html  sitemap.html  styleguide.html
server/: README_SERVER.md  __init__.py  butterfly_server.py  game_server.py  node_discovery.py
server/examples/: basic_network.py  game_server_demo.py
tests/: __init__.py  test_kernel.py
