[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "butterflyfx-kernel"
version = "1.0.0"
authors = [
    { name = "Kenneth Bingham", email = "keneticsart@gmail.com" },
]
description = "Dimensional Computing Foundation - A 7-level helix model replacing tree-based hierarchical structures"
readme = "README.md"
license = { text = "CC BY 4.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "dimensional-computing",
    "helix",
    "mathematical-kernel",
    "state-machine",
    "paradigm",
    "manifold",
    "substrate",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
server = [
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
]
audio = [
    "sounddevice>=0.4.6",
]

[project.urls]
Homepage = "https://butterflyfx.us"
Documentation = "https://github.com/kenbin64/butterflyfx_kernel#readme"
Repository = "https://github.com/kenbin64/butterflyfx_kernel"
Issues = "https://github.com/kenbin64/butterflyfx_kernel/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
